# envsleuth

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
envsleuth/: __init__.py  checker.py  cli.py  display.py  generator.py  scanner.py
test/: test_checker.py
tests/: test_scanner.py
